--- a/configs/meta-user/uz3eg_iocc/recipes-apps/python-webserver/files/index.html
+++ b/configs/meta-user/uz3eg_iocc/recipes-apps/python-webserver/files/index.html
@@ -63,7 +63,7 @@ These performance tests were running using the Bonnie++ utility to test a variet
 <p> 
     <ul>
         <li>UltraZed-EG SOM <a href="pdfs/5043-PB-AES-ZU3EG-1-SOM-G-V3.pdf" target="_blank"> product brief</a></li>
-        <li>UltraZed-EG I/O Carrier Card <a href="pdfs/5080-PB-AES-ZU-IOCC-G-V2e.pdf" target="_blank"> product brief</a> </li>
+        <li>UltraZed-EG PCIe Carrier Card <a href="pdfs/5081-PB-AES-ZU-PCIECC-G-V2d.pdf" target="_blank"> product brief</a> </li>
         <li>Delkin Devices <a href="pdfs/Delkin_Devices_Product_Line.pdf" target="_blank"> product portfolio</a> </li>
     </ul>
 </p>
@@ -72,7 +72,7 @@ These performance tests were running using the Bonnie++ utility to test a variet
 <p> 
     <i> (Note that these links point to locations not served by the embedded webserver)</i> 
     <ul>
-        <li> <a href="https://www.element14.com/community/docs/DOC-91240" target="_blank">UltraZed-EG Starter Kit</a> </li>
+        <li> <a href="https://www.element14.com/community/community/designcenter/zedboardcommunity/ultrazed/ultrazed-eg" target="_blank">UltraZed-EG</a> </li>
         <li> <a href="http://www.xilinx.com"  target="_blank">Xilinx</a></li>
         <li>More information about the <a href="https://www.coker.com.au/bonnie++/readme.html" target="_blank">Bonnie++ </a> performance test utility</li>
         <li>A good <a href="https://www.jamescoyle.net/how-to/599-benchmark-disk-io-with-dd-and-bonnie" target="_blank">Bonnie++ howto </a> </li>
